# radi8c

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FTXUI_MIGRATION.md  Makefile  QUICKSTART.md  README.md  WINDOWS_BUILD.md  cmake_install.cmake  compile_commands.json  run.sh
include/: Config.h  Connection.h  FileTransfer.h  Protocol.h  TUI.h
src/: Config.cpp  Connection.cpp  FileTransfer.cpp  Protocol.cpp  TUI.cpp  TUI_ncurses_backup.cpp  main.cpp  main_ncurses_backup.cpp
